<resources>
    <string name="app_name">IndoorPos</string>
    <string name="action_settings">Settings</string>
    <!-- Menu and Fragment Titles -->
    <string name="nav_wifi_scan">WiFi Scan</string>
    <string name="nav_pdr">PDR</string>
    <string name="nav_exit">Exit</string>
    <string name="key_back_twice">Press again to exit</string>
    <string name="nav_wifi_title">WiFi Fingerprint Update</string>
    <string name="nav_pdr_title">PDR</string>
    <!-- WiFi Fragment Components -->
    <string name="wifi_scan_cycle">ScanCycle</string>
    <string name="wifi_scan_cycle_picker_title">Select the scan cycle(s)</string>
    <string name="wifi_scan_num">ScanNum</string>
    <string name="wifi_scan_num_picker_title">Select the scan number</string>
    <string name="wifi_coord">XY(m)</string>
    <string name="wifi_orient">Orient(\u00B0)</string>
    <string name="wifi_scan">Scan</string>
    <string name="wifi_stop">Stop</string>
    <string name="wifi_status">Please Open WiFi First.</string>
    <string name="wifi_scan_finished">WiFi Scan Finished, we got %d records</string>
    <string name="wifi_scan_dialog_ok">OK</string>
    <string name="wifi_scan_dialog_cancel">Cancel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_wifi_fragment">Hello wifi fragment</string>
    <string name="hello_pdr_fragment">Hello pdr fragment</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
