<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
            android:title="Import" />
        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_wifiscan" android:icon="@android:drawable/ic_menu_save"
                android:title="@string/nav_wifi_scan" />
            <item android:id="@+id/nav_pdr" android:icon="@android:drawable/ic_menu_send"
                android:title="@string/nav_pdr" />
            <item android:id="@+id/nav_exit" android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/nav_exit"/>
        </menu>
    </item>

</menu>