<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nku.netlab.pete.indoorpos.WifiTrainingFragment">
    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="5"
            android:layout_gravity="top"
            android:layout_marginLeft="2pt"
            android:layout_marginTop="2pt"
            android:alignmentMode="alignBounds">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/wifi_coord"
                android:id="@+id/textView4"
                android:layout_row="0"
                android:layout_column="0"
                android:singleLine="true" />

            <EditText
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/edtX"
                android:layout_row="0"
                android:layout_column="1"
                android:text="0.0" />

            <EditText
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/edtY"
                android:layout_row="0"
                android:layout_column="2"
                android:text="0.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/wifi_orient"
                android:id="@+id/textView6"
                android:layout_row="1"
                android:layout_column="0"
                android:singleLine="true" />

            <EditText
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:ems="10"
                android:id="@+id/edtOrient"
                android:layout_row="1"
                android:layout_column="1"
                android:text="0.0" />

            <ProgressBar
                android:id="@+id/pbScanStatus"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:layout_row="2"
                android:visibility="invisible" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_scan"
                android:id="@+id/btnScan"
                android:layout_row="3"
                android:layout_column="0"
                android:enabled="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_stop"
                android:id="@+id/btnStop"
                android:layout_row="3"
                android:layout_column="2"
                android:enabled="false" />

        </GridLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hello_wifi_fragment" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
